assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Google Fonts
@import url(https://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);

// Font Variables
$roboto-slab: 'Roboto Slab', serif;
$open-sans: 'Open Sans', sans-serif;


// Our variables
//$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
$heading-family: "Roboto Slab", Arial, sans-serif;
$base-font-family: "Open Sans", Arial, sans-serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #333;
$background-color: #fdfdfd;
$brand-color:      #8764b4;
$brand-color-1:    #bf033b;
$brand-color-2:    #f00a36;
$brand-color-3:    #ed3b21;
$brand-color-4:    #ff6908;
$brand-color-5:    #ffc719;
$brand-color-6:    #598c14;


/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-family: $heading-family;
    font-weight: 700;
    color: $brand-color;
}

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    900px;
$on-palm:          600px;
$on-laptop:        800px;

// Minima also includes a mixin for defining media queries.
// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }

// Import partials from the `minima` theme.

.wrapper img, .wrapper video, .wrapper iframe {
  border-radius: 8px;
  max-width: 100%;
  box-shadow: 1px 3px 10px #888888;
  margin: 1em;
}

.wrapper figure, .wrapper img, .wrapper video {
  height: auto;
}

.wrapper figure, .wrapper img, .wrapper video, .wrapper iframe {
  text-align: center;
  font-style: italic;
  font-size: smaller;
  text-indent: 0;
  margin-left: auto;
  margin-right: auto;
  display: table;
}

.wrapper figcaption {
  display: table-caption;
  caption-side: bottom;
}

iframe {
  border: 0;
}

.wrapper caption {
  display: table-caption;
  text-align: center;
  position: relative;
}

.post-list img {
  width: 40%;
  float: right;
  display: absolute;
  //padding: 0 3% 1% 0;
  margin: 0 0 1em 1em;
  box-shadow: 1px 3px 10px #888888;
}

.post-list li {
  border-top: 0.1em dotted #DEDEDE;
  padding-top: 1.5em;
  padding-bottom: 1.5em;
  margin-bottom: 0 !important;
}

.post-list li::after {
  content: "";
  clear: both;
  display: table;
}

.site-nav{
  float: right;
  padding-left: .5em;
  padding-right: .5em;
  position: relative;
  text-align: left;
}

ul.dropdown li {
  line-height: 100%;
}

nav ul.dropdown li {
 display: block;
 //border: 2px white solid;
}

nav li:hover {
  cursor: pointer;
}

nav ul li ul {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  margin-top: 2.5rem;
  left: 0;
  display: none;
}

nav ul li:hover > ul,
nav ul li ul:hover {
  visibility: visible;
  opacity: 1;
  display: block;
  background: #eee;
  z-index: 100;
  border-radius: 6px;
  margin-top: -.25em;
}

nav ul li ul li {
  clear: both;
  width: 100%;
}

nav ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

nav li {
  color: #fff;
  display: block;
  float: left;
  text-decoration: none;
  text-align: left;
  //padding: 0.5rem;
  //position: relative;
}

.dropdown li {
  padding: .5rem;
}

nav li a {
  color: #000;
}

nav li:hover {
  //background: red;
  cursor: pointer;
}

nav ul li ul {
  background: #CCC;
  visibility: hidden;
  opacity: 0;
  min-width: 5rem;
  position: absolute;
  margin-top: 0;
  left: 0;
  display: none;
}

nav ul li:hover > ul,
nav ul li ul:hover {
  visibility: visible;
  opacity: 1;
  display: block;
}

nav ul li ul li {
  clear: both;
  width: 100%;
}

.post-content h4 {
  margin-bottom: 0;
}

.form--search input {
  height: 40px;
  width: 100%;
  font-size: 1em;
  border-radius: 20px;
  padding: 0 20px;
  margin: 0 10px 20px;
}

@import "minima";

.site-header {
  border-top: 8px solid #424242;
}

@media screen and (max-width: 600px) {
  .site-nav {
  position: relative;
  top: 0;
  right: 0;
  left: 0;
  margin-bottom: .5em;
  }
}

.post-content {
  text-align: justify;
  overflow-wrap: break-word;
}

.custom-heading{
    margin-bottom:30px;
}

.post-title {
  @include relative-font-size(2.25);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($on-laptop) {
    @include relative-font-size(2);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(1.75);

    @include media-query($on-laptop) {
      @include relative-font-size(1.652);
    }
  }

  h3 {
    @include relative-font-size(1.375);

    @include media-query($on-laptop) {
      @include relative-font-size(1.25);
    }
  }

  h4 {
    @include relative-font-size(1.125);

    @include media-query($on-laptop) {
      @include relative-font-size(1.075);
    }
  }
}

